Update CurriculumRecord.java
Modified some methods to fit some changes